--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
+    //设置编译选项和其他资源
     compileSdkVersion 25
     buildToolsVersion '25.0.0'
     defaultConfig {
+        //可以注入其他选项
         applicationId "zbf.zbficonview"
         minSdkVersion 15
         targetSdkVersion 25
@@ -12,6 +14,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        //可以注入其他选项
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
